--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <a href="#home">Home</a>
             <a href="#site">Site</a>
             <a href="#contato">Contato</a>
+            <a href="#receitas">Receitas</a>
         </nav>
     </header>
     <main>
@@ -31,6 +32,34 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum temporibus perspiciatis optio impedit natus architecto commodi. Consequuntur, vel. Error nemo, recusandae esse facere dolor porro iusto? Rem reiciendis culpa ipsa?
                 </p>
+        </section>
+        <section id="receitas">
+            <h2>Receitas</h2>
+                <p>Olá, vou ensinar a fazer um bolo de chocolate</p>
+                <p>Vamos começar listando os ingredientes necessários</p>
+                <ul>
+                    <li>
+                        Farinha
+                    </li>
+                    <li>
+                        2 Ovos
+                    </li>
+                    <li>
+                        Cacau em pó
+                    </li>
+                    <li>
+                        Leite
+                    </li>
+                    <li>
+                        Fermento
+                    </li>
+                    <li>
+                        Manteiga
+                    </li>
+                    <li>
+                        Gotas de chocolate
+                    </li>
+                </ul>
         </section>
     </main>
 </body>
